--- a/LBSTest/app/src/main/res/layout/activity_main.xml
+++ b/LBSTest/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,12 @@
         android:id="@+id/position_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:visibility="gone"/>
 
+    <com.baidu.mapapi.map.MapView
+        android:id="@+id/bmap_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clickable="true">
+    </com.baidu.mapapi.map.MapView>
 </LinearLayout>
